# big-integer

./: CMakeLists.txt  README.md  tests.cpp
big_integer_lib/: BigInteger.cpp  BigInteger.h  EquationsParser.cpp  EquationsParser.h  UnsignedBigInteger.cpp  UnsignedBigInteger.h
